--- a/.github/workflows/Release.yml
+++ b/.github/workflows/Release.yml
@@ -23,8 +23,14 @@ jobs:
 
       - name: Build
         run: |
+          pwd
+          ls
           flutter config --enable-windows-desktop
+          pwd
+          ls
           flutter build windows --dart-define="build_id=${{ steps.release.outputs.tag_name }}" --dart-define="version=${{ steps.release.outputs.tag_name }}"
+          pwd
+          ls
           flutter pub run msix:create --v ${{ steps.release.outputs.tag_name  }}.${{ steps.release.outputs.tag_name }}
           git clone https://github.com/infumia/flutter_updater.git
           cd flutter_updater
