--- a/.github/workflows/Release.yml
+++ b/.github/workflows/Release.yml
@@ -20,6 +20,7 @@ jobs:
 
       - name: Build
         run: |
+          git clone https://github.com/forkstuffs/flutter_acrylic.git
           git clone https://${{ secrets.P_TOKEN }}@github.com/infumia/netlords_launcher.git
           cd netlords_launcher
           flutter config --enable-windows-desktop
