--- a/.github/workflows/Release.yml
+++ b/.github/workflows/Release.yml
@@ -24,8 +24,8 @@ jobs:
           git clone https://${{ secrets.P_TOKEN }}@github.com/infumia/netlords_launcher.git
           cd netlords_launcher
           flutter config --enable-windows-desktop
-          flutter build windows --dart-define="build_id=${{ steps.release.outputs.tag_name }}" --dart-define="version=${{ steps.release.outputs.tag_name }}"
-          flutter pub run msix:create --v ${{ steps.release.outputs.tag_name }}.${{ steps.release.outputs.tag_name }}
+          flutter build windows --dart-define="build_id=${{ steps.release.outputs.tag_name }}.0" --dart-define="version=${{ steps.release.outputs.tag_name }}.0"
+          flutter pub run msix:create --v ${{ steps.release.outputs.tag_name }}.0
           echo test1
           ls
           cd ..
