--- a/.github/workflows/Release.yml
+++ b/.github/workflows/Release.yml
@@ -25,7 +25,7 @@ jobs:
           cd netlords_launcher
           flutter config --enable-windows-desktop
           flutter build windows --dart-define="build_id=${{ steps.release.outputs.tag_name }}.0" --dart-define="version=${{ steps.release.outputs.tag_name }}.0"
-          flutter pub run msix:create --v ${{ steps.release.outputs.tag_name }}.0
+          flutter pub run msix:create --v "${{ steps.release.outputs.tag_name }}.0"
           echo test1
           ls
           cd ..
