--- a/.github/workflows/Release.yml
+++ b/.github/workflows/Release.yml
@@ -15,6 +15,7 @@ jobs:
           channel: master
 
       - uses: release-drafter/release-drafter@master
+        id: release
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
@@ -26,7 +27,7 @@ jobs:
           flutter config --enable-windows-desktop
           flutter build windows --dart-define="build_id=${{ steps.release.outputs.tag_name }}.0" --dart-define="version=${{ steps.release.outputs.tag_name }}.0"
           echo "${{ steps.release.outputs.tag_name }}.0"
-          flutter pub run msix:create --v "${{ steps.release.outputs.tag_name }}.0"
+          flutter pub run msix:create --v ${{ steps.release.outputs.tag_name }}.0
           echo test1
           ls
           cd ..
