--- a/.github/workflows/Release.yml
+++ b/.github/workflows/Release.yml
@@ -28,23 +28,16 @@ jobs:
           flutter build windows --dart-define="build_id=${{ steps.release.outputs.tag_name }}.0" --dart-define="version=${{ steps.release.outputs.tag_name }}.0"
           echo "${{ steps.release.outputs.tag_name }}.0"
           flutter pub run msix:create --v ${{ steps.release.outputs.tag_name }}.0
-          echo test1
-          ls
           cd ..
-          echo test2
-          ls
           git clone https://github.com/infumia/flutter_updater.git
           cd flutter_updater
           dart pub get
-          echo test3
-          ls
           cd ${{ github.workspace }}\netlords_launcher\build\windows\runner\Release\
-          ls
           cd ${{ github.workspace }}\flutter_updater
           dart compile exe lib/main.dart --output ${{ github.workspace }}\netlords_launcher\build\windows\runner\Release\updater.exe
           cd ${{ github.workspace }}
           mkdir win-build
-          copy ${{ github.workspace }}\netlords_launcher\build\windows\runner\Release\netlordslauncher.msix win-build
+          copy ${{ github.workspace }}\netlords_launcher\build\windows\runner\Release\netlords_launcher.msix win-build
           copy ${{ github.workspace }}\netlords_launcher\assets\certificate.pfx win-build
           copy ${{ github.workspace }}\netlords_launcher\assets\install.bat win-build
 
@@ -61,7 +54,7 @@ jobs:
           name: NetLordsLauncher-${{ steps.release.outputs.tag_name }}-win7
           path: |
             netlords_launcher/build/windows/runner/Release
-            !netlords_launcher/build/windows/runner/Release/netlordslauncher.msix
+            !netlords_launcher/build/windows/runner/Release/netlords_launcher.msix
           retention-days: 1
 
   PreRelease:
@@ -78,6 +71,11 @@ jobs:
 
       - name: Download files
         uses: actions/download-artifact@v2
+
+      - uses: release-drafter/release-drafter@master
+        id: release
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Zip Windows 7
         uses: thedoctor0/zip-release@master
