--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -21,7 +21,7 @@ jobs:
           cd netlords_launcher
           flutter config --enable-windows-desktop
           flutter build windows --dart-define="build_id=${{ github.event.release.tag_name }}.0" --dart-define="version=${{ github.event.release.tag_name }}.0"
-          flutter pub run msix:create --v .0
+          flutter pub run msix:create --v ${{ github.event.release.tag_name }}.0
           cd ..
           git clone https://github.com/infumia/flutter_updater.git
           cd flutter_updater
