--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -36,19 +36,17 @@ jobs:
           copy ${{ github.workspace }}\netlords_launcher\assets\install.bat win-build
 
       - name: Zip Windows 10
-        uses: vimtor/action-zip@v1
+        uses: thedoctor0/zip-release@master
         with:
-          files: |
-            win-build
-          dest: NetLordsLauncher-${{ github.event.release.tag_name }}-win10.zip
+          directory: win-build
+          filename: 'NetLordsLauncher-${{ github.event.release.tag_name }}-win10.zip'
 
       - name: Zip Windows 7
-        uses: vimtor/action-zip@v1
+        uses: thedoctor0/zip-release@master
         with:
-          files: |
-            ${{ github.workspace }}\netlords_launcher\build\windows\runner\Release
-            !${{ github.workspace }}\netlords_launcher\build\windows\runner\Release\netlords_launcher.msix
-          dest: NetLordsLauncher-${{ github.event.release.tag_name }}-win7.zip
+          directory: ${{ github.workspace }}\netlords_launcher\build\windows\runner\Release
+          filename: 'NetLordsLauncher-${{ github.event.release.tag_name }}-win7.zip'
+          exclusions: '*.msix'
 
       - uses: softprops/action-gh-release@v1
         with:
