--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -46,9 +46,7 @@ jobs:
         with:
           path: ${{ github.workspace }}\netlords_launcher\build\windows\runner\Release
           filename: 'NetLordsLauncher-${{ github.event.release.tag_name }}-win7.zip'
-          exclusions: '*.msix'
-
-      - run: ls
+          exclusions: '*.msix*'
 
       - uses: softprops/action-gh-release@v1
         with:
