--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -20,7 +20,7 @@ jobs:
           git clone https://${{ secrets.P_TOKEN }}@github.com/infumia/netlords_launcher.git
           cd netlords_launcher
           flutter config --enable-windows-desktop
-          flutter build windows --dart-define="build_id=${{ github.event.release.tag_name }}.0" --dart-define="version=${{ github.event.release.tag_name }}.0"
+          flutter build windows --dart-define="build_id=${{ github.event.release.tag_name }}" --dart-define="version=${{ github.event.release.tag_name }}"
           flutter pub run msix:create --v ${{ github.event.release.tag_name }}.0
           cd ..
           git clone https://github.com/infumia/flutter_updater.git
